@@ -63,6 +63,8 @@ android {
                         '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
                         '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
                         '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+                        '--add-opens', 'java.base/sun.net.www.protocol.http=ALL-UNNAMED',
                         '--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED',
                 ])
             }
